--- a/Exercises/myWork/css/styles.css
+++ b/Exercises/myWork/css/styles.css
@@ -1,6 +1,8 @@
 /* Global Styles */
 body {
   color: #343434;
+  margin: 0;
+  padding: 0;
 }
 
 img {
@@ -13,6 +15,11 @@ a {
 
 a:hover {
   text-decoration: none;
+}
+
+.content-wrap {
+  width: 800px;
+  margin: 0 auto;
 }
 
 /* Profile */
