--- a/Exercises/myWork/css/styles.css
+++ b/Exercises/myWork/css/styles.css
@@ -1,8 +1,17 @@
 /* Global Styles */
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&Montserrat:wght@400;700&display=swap');
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   color: #343434;
   margin: 0;
   padding: 0;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+  line-height: 1.5;
 }
 
 img {
@@ -17,9 +26,25 @@ a:hover {
   text-decoration: none;
 }
 
+h1 {
+  font-size: 100px;
+  line-height: 1;
+}
+
+h2 {
+  font-size: 45px;
+}
+
+h1, h2 {
+  font-family: 'Caveat', cursive;
+  font-weight: 400;
+  margin: 0;
+}
+
 .content-wrap {
   width: 800px;
   margin: 0 auto;
+  padding: 60px 0;
 }
 
 /* Profile */
@@ -43,6 +68,26 @@ header {
   text-decoration: none;
   padding: 8px;
   border-radius: 4px;
+  display: inline-block;
+}
+
+.projects .btn:hover {
+  background: rgba(47, 48, 97, 80%);
+}
+
+.project-item {
+  overflow: hidden;
+  border-bottom: 1px dashed #343434;
+  padding: 25px 0;
+}
+
+.project-item img {
+  float: left;
+  margin-right: 20px;
+}
+
+.project-item h3 {
+  margin-top: 0;
 }
 
 /* Work Experience */
@@ -57,4 +102,17 @@ header {
 footer {
   background: #343434;
   color: #f7fff7;
+  text-align: center;
+}
+
+.contact-list {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+
+.contact-list a {
+  padding: 15px;
+  display: inline-block;
 }
